[gd_scene load_steps=4 format=3 uid="uid://7dtd0vhc7a3k"]

[ext_resource type="Script" path="res://src/projectiles/web_projectile.gd" id="1_c12h1"]
[ext_resource type="Texture2D" uid="uid://k3uycxrwxec2" path="res://icon.svg" id="1_ebots"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7lbx6"]
radius = 3.0
height = 50.0

[node name="web_projectile" type="Area2D"]
collision_layer = 16
collision_mask = 10
script = ExtResource("1_c12h1")

[node name="sprite" type="Sprite2D" parent="."]
scale = Vector2(0.05, 0.4)
texture = ExtResource("1_ebots")

[node name="capsule_collider" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_7lbx6")

[node name="timer_destruct" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="timer_destruct" to="." method="_on_timer_destruct_timeout"]
